Back function updated

--- a/templates/application_approval.html
+++ b/templates/application_approval.html
@@ -130,7 +130,7 @@
         <div class="name">SPORTURE</div>
     </div>
     <nav class="nav-links">
-        <a href="/">Back</a>
+        <a href="/admin">Back</a>
         <button class="logout-btn" onclick="logout()">Logout</button>
     </nav>
 </div>
