--- a/templates/admin.html
+++ b/templates/admin.html
@@ -103,7 +103,7 @@ html, body {
     font-weight: 1000;
     font-family: 'Playfair Display', serif;
     text-align: center;
-    background: linear-gradient(to right, #80e9ef, #ffd1a4);
+    background: linear-gradient(to right, #000000, #000000);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
